# loadOBJ

./: .gitignore  CMakeLists.txt  README.md
data/: README.md  save_test.mtl  save_test_1.mtl
src/: texture_load.cpp
